@@ -1,6 +1,8 @@
 #@markup ruby
 
 # for the command line
-gem 'thor'
-gem 'term-ansicolor'
+# gem 'thor' not any more
+# gem 'term-ansicolor'
+
+gem 'optplus', '>=0.0.6'
 
