@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
-# 23-Aug-2013
-#   Ensure 1.9 compliance
+# 11-Sep-2013
+#   Added a couple of helpers (an_executable) and removed thor from utility.
 
 module Jeckyl
-  # version set to 0.3.5
-  Version = '0.3.5'
-  # date set to 23-Aug-2013
-  Version_Date = '23-Aug-2013'
-  #ident string set to: jeckyl-0.3.5 23-Aug-2013
-  Ident = 'jeckyl-0.3.5 23-Aug-2013'
+  # version set to 0.3.6
+  Version = '0.3.6'
+  # date set to 11-Sep-2013
+  Version_Date = '11-Sep-2013'
+  #ident string set to: jeckyl-0.3.6 11-Sep-2013
+  Ident = 'jeckyl-0.3.6 11-Sep-2013'
 end
